fix: make assembler matrix screen Java 8 compatible